<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <!--
    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="96dp"
        android:layout_height="100dp"
        android:layout_gravity="start"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/top_rated"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/movie_vote_avg"
        app:layout_constraintEnd_toStartOf="@+id/movie_release_data"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@drawable/example_image" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:paddingBottom="@dimen/padding"
        android:text="Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    -->

    <TextView
        android:id="@+id/movie_release_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="216dp"
        android:layout_marginRight="216dp"
        android:paddingBottom="@dimen/padding"
        android:text="@string/release_date"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/movie_vote_avg"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:paddingBottom="@dimen/padding"
        android:text="@string/vote_average"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/movie_release_data"
        app:layout_constraintTop_toBottomOf="@+id/movie_release_data" />

    <TextView
        android:id="@+id/movie_synopsis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:paddingBottom="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/movie_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        tools:layout_editor_absoluteX="273dp"
        tools:layout_editor_absoluteY="66dp" />


</android.support.constraint.ConstraintLayout>